tests/vendor/valid/simple/ternary_rh_binop.c
//expect 1
//tags: simple, conditional
int main() {
    return 0 ? 1 : 0 || 2;
}