tests/vendor/invalid/syntax/while_missing_paren.c
//tags: simple, loop
int main() {
    while 1 {
        return 0;
    }
}